css/index.css
@charset "utf-8";

html {
    height: 100%;
}

body {
    height: 100%;
    font-size: 100%;
    font-family: Lato, Helvetica, Arial, sans-serif;
    background-color: #fafafa;
    padding: 0px;
    border: 0px solid red;
    margin: 0px;
    min-height: 100%;
    display: grid;
    grid-template-rows: auto 1fr auto;
    
}

a {
    color: black;
    text-decoration: none;
}

/*> header*/
header {
    padding: 0px;
    border: 0px solid red;
    margin: 0px;
    margin-bottom: 2em;
    background-color: rgb(8, 27, 59);
}


@media (width >= 1024px) {

    .header-wrapper {
        padding: 0px;
        border: 0px solid red;
        max-width: 65em;
        margin-top: 1em;
        margin-bottom: 1em;
        margin-left: auto;
        margin-right: auto;

        display: grid;
        grid-template-columns: 60% 40%;
        align-items:center;
        justify-items: center;

    }

        
    #logo {
        padding: 0px;
        border: 0px solid red;
        margin: 0px;
        margin-left: 1em;

    }

    #logo-icon {
        padding: 0%;
        border: 0px solid red;
        margin: 0px;
        max-width: 50%;
        max-height: 50%;

    }

    #head-email {
        align-self: end;
    }

    #head-email p {
        padding: 0px;
        border: 0px solid red;
        margin: 0px;
        margin-bottom: 0.1em;
        color: #fafafa;
    }
    #head-email a {
        color: #fafafa;
    }

}


@media (width < 1024px) and (width >= 768px) {
    .header-wrapper {
        padding: 0px;
        border: 0px solid red;
        max-width: 52em;
        margin-top: 1em;
        margin-bottom: 1em;
        margin-left: auto;
        margin-right: auto;

        display: grid;
        grid-template-columns: 60% 40%;
        align-items:center;
        justify-items: center;

    }
        
    #logo {
        padding: 0px;
        border: 0px solid red;
        margin: 0px;

    }

    #logo-icon {
        padding: 0%;
        border: 0px solid red;
        margin: 0px;
        max-width: 50%;
        max-height: 50%;

    }

    #head-email {
        align-self: end;

    }

    #head-email p {
        padding: 0px;
        border: 0px solid red;
        margin: 0px;
        margin-bottom: 0.1em;
        color: #fafafa;
    }
    #head-email a {
        color: #fafafa;
    }

}


@media (width < 768px) or (aspect-ratio < 1/1.5) {
    .header-wrapper {
        padding: 0px;
        border: 0px solid red;
        max-width: 41em;
        margin-top: 2em;
        margin-bottom: 3em;
        margin-left: auto;
        margin-right: auto;

        display: grid;
        grid-template-rows: 60% 40%;
        align-items:center;
    }
        
    #logo {
        padding: 0px;
        border: 0px solid red;
        margin: 0px;
        margin-left: 1em;
        justify-self: left;

    }

    #logo-icon {
        padding: 0%;
        border: 0px solid red;
        margin: 0px;
        max-width: 55%;
        max-height: 55%;

    }

    #head-email {
        margin-right: 1em;
        justify-self: right;

    }

    #head-email p {
        padding: 0px;
        border: 0px solid red;
        margin: 0px;
        margin-bottom: 0.1em;
        color: #fafafa;
    }
    #head-email a {
        color: #fafafa;
    }

}

/*<header*/

/*>main*/
main {
    width: 100%;
    padding: 0px;
    border: 0px solid red;
    margin: 0px;
    margin-bottom: 2em;
}


@media (width >= 1024px){
    .main-wrapper {
        padding: 0px;
        border: 0px solid red;
        display: grid;
        max-width: 60em;
        grid-template-rows: 20% 80%;
        margin-left: auto;
        margin-right: auto;
    }

    #introduction {
        padding: 0px;
        border: 0px solid blue;
        margin: 0px;
        margin-left: 1em;
        margin-right: 1em;
        margin-bottom: 2em;
    }

    #introduction > p {
        padding: 0em;
        border: 0px solid red;
        margin: 0px;
        font-size: 1.2em;
        line-height: 1.5em;
        text-align: justify;

    }

    #introduction #first-p::first-letter {
        font-size: 160%;
        color: rgb(18, 60, 196);
    }

    #stickers {
        padding: 0px;
        border: 0px solid blue;
        margin: 0px;
        margin-bottom: 4em;
        display: grid;
        gap: 1.5em;
        grid-template-columns: 50% 50%;
        justify-items: stretch;
        align-items: stretch;

    }

    .sticker {
        padding: 1em;
        padding-left: 1.6em;
        border: 0px solid red;
        margin: 1.5em;
        background-color: rgb(220, 220, 220);
        border-radius: 0.5em;
    }

    .sticker a {
        color: black;
        text-decoration: underline;
    }

    .sticker .sti-h {
        font-size: 1.8em;
    }

}


@media (width <= 1024px) and (width >= 768px){
    .main-wrapper {
        padding: 0px;
        border: 0px solid red;
        display: grid;
        max-width: 50em;
        grid-template-rows: 20% 80%;
        margin-left: auto;
        margin-right: auto;
    }

    #introduction {
        padding: 0px;
        border: 0px solid blue;
        margin: 0px;
        margin-left: 1em;
        margin-right: 1em;
        margin-bottom: 2em;
    }

    #introduction > p {
        padding: 0em;
        border: 0px solid red;
        margin: 0px;
        font-size: 1.2em;
        line-height: 1.5em;
        text-align: justify;

    }

    #introduction #first-p::first-letter {
        font-size: 160%;
        color: rgb(18, 60, 196);
    }

    #stickers {
        padding: 0px;
        border: 0px solid blue;
        margin: 0px;
        margin-bottom: 4em;
        display: grid;
        gap: 1em;
        grid-template-columns: 50% 50%;
        justify-items: stretch;
        align-items: stretch;

    }

    .sticker {
        padding: 1em;
        padding-left: 1.6em;
        border: 0px solid red;
        margin: 1.2em;
        background-color: rgb(220, 220, 220);
        border-radius: 0.5em;
    }

    .sticker a {
        color: black;
        text-decoration: underline;
    }

    .sticker .sti-h {
        font-size: 1.8em;
    }

}


@media (width < 768px) or (aspect-ratio < 1/1.5){
    .main-wrapper {
        padding: 0px;
        border: 0px solid red;
        display: grid;
        max-width: 40em;
        grid-template-rows: 20% 80%;
        margin-left: auto;
        margin-right: auto;
    }

    #introduction {
        padding: 0px;
        border: 0px solid blue;
        margin: 0px;
        margin-left: 2em;
        margin-right: 2em;
        margin-bottom: 2em;
    }

    #introduction > p {
        padding: 0em;
        border: 0px solid red;
        margin: 0px;
        font-size: 1.2em;
        line-height: 1.5em;
        text-align: justify;

    }

    #introduction #first-p::first-letter {
        font-size: 160%;
        color: rgb(18, 60, 196);
    }

    #stickers {
        padding: 0px;
        border: 0px solid blue;
        margin: 0px;
        margin-bottom: 4em;

        display: grid;
        gap: 1em;
        grid-template-columns: 1fr;
        justify-items: stretch;
        align-items: stretch;

    }

    .sticker {
        padding: 1em;
        padding-left: 1.6em;
        border: 0px solid red;
        margin: 1em;
        margin-left: 3em;
        margin-right: 3em;
        background-color: rgb(220, 220, 220);
        border-radius: 0.5em;
    }

    .sticker a {
        color: black;
        text-decoration: underline;
    }

    .sticker .sti-h {
        font-size: 1.8em;
    }

}

/*<main*/

/*footer css start*/
footer {
    padding: 0px;
    border: 0px solid red;
    background-color: rgb(3, 13, 31);
}


@media (width >= 1024px) {

    .footer-wrapper {
        padding: 0px;
        border: 0px solid red;
        max-width: 65em;
        margin-top: 1em;
        margin-bottom: 1em;
        margin-left: auto;
        margin-right: auto;

        display: grid;
        grid-template-columns: 50% 50%;
        grid-template-rows: auto;
    
        color: #fafafa;
    }


    .mytimego {
        padding: 0px;
        border: 0px solid red;
        margin: 0px;
        grid-row: 1;
        grid-column: 1/3;
    }

    .mylink {
        grid-row: 2;
        grid-column: 1;
    }

    .other-link {
        grid-row: 2;
        grid-column: 2;
    }

    .footer-wrapper ul {
        padding: 0px;
        list-style-type: none;
    }

    .footer-wrapper a {
        color: #fafafa;
    }

    .footer-wrapper ul li {
        padding-top: 0.5em;
        padding-bottom: 0.5em;
    }

    progress {
        border-radius: 5px;
        background-color: rgb(214, 203, 189);
        height: 1em;
        box-shadow: 0.1em;
        border: 1px solid black;
        
    }
    progress::-moz-progress-bar {
        background-color: brown;
        border-radius: 3px;
    }

}

@media (width < 1024px) and (width >= 768px) {

    .footer-wrapper {
        padding: 0px;
        border: 0px solid red;
        max-width: 45em;
        margin-top: 1em;
        margin-bottom: 1em;
        margin-left: auto;
        margin-right: auto;
        
        display: grid;
        grid-template-columns: 50% 50%;
        grid-template-rows: auto;
        align-items: center;
        color: #fafafa;
    }

    .mytimego {
        padding: 0px;
        border: 0px solid red;
        margin: 0px;
        grid-row: 1;
        grid-column: 1/3;
    }

    .mylink {
        grid-row: 2;
        grid-column: 1;
    }

    .other-link {
        grid-row: 2;
        grid-column: 2;
    }

    .footer-wrapper ul {
        padding: 0px;
        list-style-type: none;
    }

    .footer-wrapper a {
        color: #fafafa;
    }

    .footer-wrapper ul li {
        padding-top: 0.5em;
        padding-bottom: 0.5em;
    }

    progress {
        border-radius: 5px;
        background-color: rgb(214, 203, 189);
        height: 1em;
        box-shadow: 0.1em;
        border: 1px solid black;
        
    }
    progress::-moz-progress-bar {
        background-color: brown;
        border-radius: 3px;
    }

}

@media (width < 768px) (aspect-ratio < 1/1.5){


    .footer-wrapper {
        padding: 0px;
        border: 0px solid red;
        max-width: 41em;
        margin-top: 1em;
        margin-bottom: 1em;
        margin-left: auto;
        margin-right: auto;
        
        display: grid;
        grid-template-columns: 50% 50%;
        grid-template-rows: auto;
        align-items: center;
        color: #fafafa;
    }

    .mytimego {
        padding: 0px;
        border: 0px solid red;
        margin: 0px;
        grid-row: 1;
        grid-column: 1/3;
    }

    .mylink {
        grid-row: 2;
        grid-column: 1;
    }

    .other-link {
        grid-row: 2;
        grid-column: 2;
    }

    .footer-wrapper ul {
        padding: 0px;
        list-style-type: none;
    }

    .footer-wrapper a {
        color: #fafafa;
    }

    .footer-wrapper ul li {
        padding-top: 0.5em;
        padding-bottom: 0.5em;
    }

    progress {
        border-radius: 5px;
        background-color: rgb(214, 203, 189);
        height: 1em;
        box-shadow: 0.1em;
        border: 1px solid black;
        
    }
    progress::-moz-progress-bar {
        background-color: brown;
        border-radius: 3px;
    }

}



/*footer css end*/

